fixed header z-index

--- a/public/css/simon.css
+++ b/public/css/simon.css
@@ -468,6 +468,7 @@ header {
   top: 0;
   left: 0;
   right: 0;
+  z-index: 50;
 }
 
 h2 {
