--- a/public/css/wikipedia-viewer.css
+++ b/public/css/wikipedia-viewer.css
@@ -473,6 +473,7 @@ header {
   top: 0;
   left: 0;
   right: 0;
+  z-index: 50;
 }
 
 h2 {
