--- a/resources/assets/projects/wikipedia-viewer/sass/base/_base-styles.scss
+++ b/resources/assets/projects/wikipedia-viewer/sass/base/_base-styles.scss
@@ -47,6 +47,7 @@ header{
   top:0;
   left:0;
   right:0;
+  z-index:50;
 }
 h2{
   @extend %center;
